# momentumjs

./: .gitignore  CMakeLists.txt  CURSOR_RECOVERY_GUIDE.md  LICENSE  README.md  index.html  install.sh  script.js  styles.css  test_robot.js  test_setup_random.js  uninstall.sh  如何恢复Cursor检查点.md
CSXS/: manifest.xml
bundle/: momentum.js
bundle/includes/: DATA.js  IO.js  color.js  constants.js  controller.js  core.js  data.js  environment.js  image.js  keyframe.js  library.js  math.js  private-vars.js  registry.js  shape.js  structure.js  transformation.js  typography.js
docs/: contributor.md  getting-started.md
docs/ai/: ai-quick-rules.md  momentum-for-ai.md
docs/api/: color.md  controllers.md  data.md  environment.md  image.md  index.md  io.md  math.md  shapes.md  transform.md  typography.md
js/: CSInterface.js  main.js
js/analyzer/: conditionalAnalyzer.js  conditionalFinder.js  dependencies.js  dependencyAnalyzer.js  executor.js  fontAnalyzer.js  imageAnalyzer.js  index.js  ioAnalyzer.js  momentumStubs.js  p5Runtime.js  registry.js  registryUtils.js  runtime.js
js/analyzer/analysis/: conditions.js  dependencies.js  loops.js
js/compiler/: compilerPipeline.js
js/core/: editor.js  init.js
js/fileSystem/: fileManager.js
js/plugin/: asset.js  bitmap.js  bridge.js
js/ui/: fileTreeUI.js
js/ui/app/: bootstrap.js  (+1 more)
js/utils/: codeExecutor.js  console.js  preprocessor.js
jsx/: main.jsx
jsx/plugin/: bitmapApply.jsx  payloadBuffer.jsx  projectIO.jsx  runtimeFiles.jsx
jsx/polyfills/: json.jsx
momentumjs/: index.html  script.js  styles.css
momentumjs/CSXS/: manifest.xml
momentumjs/bundle/: momentum.js
momentumjs/jsx/: main.jsx
momentumjs/user/: blendMode.js  cep_entry.jsx  controller.js  csv.js  keyframe.js  silder.js  text1.js  textBox.js  textPoint.js  zhijiang.js
momentumjs/web/: momentum-bridge.js
motionjs/bundle/: motion.js
motionjs/user/: text1.js
movementjs/: index.html  script.js  styles.css
movementjs/CSXS/: manifest.xml
movementjs/bundle/: movement.js
movementjs/jsx/: main.jsx
movementjs/user/: blendMode.js  cep_entry.jsx  example.js  imagetest.js  setup.js  test_ml5.js
scripts/: build-ae-plugin.sh  check-ae-plugin-env.sh  check-smoke-fixtures.mjs  create-zxp-cert.sh  install-dev.sh  install-zxpsigncmd.sh  install.sh  merge-ae-plugin-universal.sh  package-installer.sh  package-release-macos.sh  package-release.sh  package-zxp.sh  uninstall.sh  verify-zxp.sh
scripts/lib/: common.sh
scripts/pkg/: postinstall
src/plugin/: Momentum.plugin-Info.plist  MomentumPiPL.r  momentum_version.h
user/: 1.js  Fourier.js  LA_Pools-Pools_per_Hood.csv  arc.js  background.js  boids.js  checkBox.js  color.js  controller.js  cp.js  example1.js  flock.js  hershey.js  image.js  imagetest.js  intersection.js  intersection_2.js  json.js  mix.js  reas.js  reas2.js  relation.js  rotc.js  sample-data.csv  sc.js  selectc.js  size.js  step.js  text.js  text1.js  wenzhou.js
user/example/: 1-basic-shapes.js  1.js  array-helper-functions-test.js  background-test.js  background.js  class-test.js  color-test.js  conversion-helper-functions-test.js  direct-call-test.js  draw-test.js  echo-decay-test.js  elseif.js  for-loop-test.js  for-object-test.js  for-range-test.js  function-basic-test.js  function-callback-test.js  function-with-loop-test.js  global-store-test.js  if-else-test.js  if.js  image.js  intersection.js  loop-cases.js  loop-control-smoke-test.js  loop-control-test.js  loop-control-visual-test.js  loop-test.js  nested-function-test.js  nested-loop-test.js  noise-test.js  point.js  print-test.js  push-pop-textleading-test.js  random-test.js  robut.js  sample-data.json  setup-only-test.js  setup-test.js  size-frameRate-test.js  (+15 more)
user/examples/: 01_shapeFunctions.js  02_transformFunctions.js  03_textFunctions.js  04_tintedImages.js  05_durationFrameRate.js  06_textBoxSlider.js  07_pointOverlapEllipses.js  08_angleBounceBox.js  09_imageColorSampler.js  10_textToPoints.js
user/hello/: csv.js  test_ml5.js
user/io/: test.json
web/: momentum-bridge.js
(+108 files in other folders)
